--- a/modules/admin_manual/pages/appliance/maintenance/backup.adoc
+++ b/modules/admin_manual/pages/appliance/maintenance/backup.adoc
@@ -8,12 +8,14 @@ The backup remains on the host system and can be restored.
 
 It is stored in :
 
+[source,plaintext]
 ----
 /var/lib/univention-appcenter/backups/ 
 ----
 
 The file name is :
 
+[source,plaintext]
 ----
 appcenter-backup-owncloud:date
 ----
@@ -22,6 +24,7 @@ In it, you find your data and conf folders.
 
 Your database backup is in :
 
+[source,plaintext]
 ----
 /var/lib/univention-appcenter/backups/data/backups
 ----
