--- a/modules/admin_manual/pages/configuration/server/security/hsmdaemon/softhsm2.adoc
+++ b/modules/admin_manual/pages/configuration/server/security/hsmdaemon/softhsm2.adoc
@@ -75,7 +75,7 @@ sudo zypper addrepo \
 
 Running `zypper lr` again should now display an additional line:
 
-[source,bash]
+[source,plaintext]
 ----
 13 | security                 | openSUSE-Leap-15.3-Security             | Yes     | (r ) Yes  | No
 ----
