--- a/modules/admin_manual/pages/appliance/configuration/wnd_setup.adoc
+++ b/modules/admin_manual/pages/appliance/configuration/wnd_setup.adoc
@@ -64,6 +64,7 @@ Create or add a `crontab` file in `/etc/cron.d/oc-wnd-process-queue`.
 an appropriate `occ wnd:process-queue` command. The commands must be **strictly sequential**.
 This can be done by using `flock -n` and tuning the `-c` parameter of `occ wnd:process-queue`
 
+[source,plaintext]
 ----
 0 */15 * * *     root  /usr/bin/univention-app shell owncloud occ wnd:process-queue -vvv SERVER SHARE
 ----
