[10.8] [PR 157] Fix some broken links found after migrating the user manual
Backport of PR #157

--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_ransomware_protection_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_ransomware_protection_commands.adoc
@@ -1,10 +1,9 @@
 = Ransomware Protection (Enterprise Edition only)
-:page-noindex: yes
 
 Marketplace URL: {oc-marketplace-url}/apps/ransomware_protection[Ransomware Protection]
 
 Use these commands to help users recover from a Ransomware attack.
-You can find more information about the application in xref:enterprise/security/ransomware-protection/index.adoc[the Ransomware Protection documentation].
+You can find more information about the application in the xref:enterprise/security/ransomware-protection/index.adoc[Ransomware Protection documentation].
 
 == Command Description
 
