--- a/modules/admin_manual/pages/configuration/server/index_php_less_urls.adoc
+++ b/modules/admin_manual/pages/configuration/server/index_php_less_urls.adoc
@@ -11,7 +11,7 @@ Before being able to use index.php-less URLs you need to enable the `mod_rewrite
 
 Furthermore these instructions are only working when using Apache together with the `mod_php` Apache module for PHP. Other modules like `php-fpm` or `mod_fastcgi` are unsupported.
 
-Finally the user running your Web server (e.g. `www-data`) needs to be able to write into the `.htaccess` file shipped within the ownCloud root directory (e.g., `/var/www/owncloud/.htaccess`).  If you have applied xref:installation/manual_installation/manual_installation.adoc#script-guided-installation[Set Correct Permissions], the user might be unable to write into this file and the needed update will fail. You need to revert this strong permissions temporarily by following the steps described in xref:maintenance/update.adoc#setting-permissions-for-updating[setting permissions for updating].
+Finally the user running your Web server (e.g. `www-data`) needs to be able to write into the `.htaccess` file shipped within the ownCloud root directory (e.g., `/var/www/owncloud/.htaccess`).  If you have applied xref:installation/manual_installation/manual_installation.adoc#script-guided-installation[Set Correct Permissions], the user might be unable to write into this file and the needed update will fail. You need to revert this strong permissions temporarily by following the steps described in xref:maintenance/upgrading/update.adoc#setting-permissions-for-updating[setting permissions for updating].
 
 == Configuration steps
 
