[10.8] [PR 180] Small text improvement for the linux database configuration document
Backport of PR #180

--- a/modules/admin_manual/pages/configuration/database/linux_database_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/database/linux_database_configuration.adoc
@@ -156,10 +156,10 @@ If you are setting up
 
 then you don’t need to do anything, as support is checked during setup and used if available. 
 
-However, if you have an
+However, if
 
-* existing ownCloud installation that you need to convert to use 4-byte Unicode support *or*
-* you are working with MySQL _earlier_ than version 5.7
+*  you have an existing ownCloud installation that you need to convert to use 4-byte Unicode support *or*
+* you are working with a MySQL version _earlier_ than version 5.7
 
 then you need to do two things:
 
