--- a/modules/admin_manual/pages/appliance/configuration/clamav.adoc
+++ b/modules/admin_manual/pages/appliance/configuration/clamav.adoc
@@ -55,11 +55,10 @@ for instructions on how to do that.
 
 == Troubleshooting
 
-""
-If you try to update the ClamAV virus database manually, by entering
-`freshclam`, and see the error below, it means that
+====
+If you try to update the ClamAV virus database manually, by entering `freshclam`, and see the error below it means, that 
 https://linux.die.net/man/1/freshclam[freshclam] is already updating the database.
-""
+====
 
 [source,plaintext]
 ----
